--- a/src/main/webapp/resources/css/home.css
+++ b/src/main/webapp/resources/css/home.css
@@ -4,6 +4,41 @@ body{
     height: 100vh;
     overflow: hidden;
     background-size: cover;
+    perspective: 2500px;
+    background: black;
+    z-index: 100;
+}
+
+#mainPane{
+    position: absolute;
+    width: 130%;
+    height: 130%;
+    left: -5%;
+    top: -5%;
+    perspective: 3000px;
+    transition: 0.8s  ease-out;
+    z-index: 101;
+}
+
+#innerPane1{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    opacity: 1;
+    transition: 2s linear;
+
+}
+
+#innerPane2{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    opacity: 1;
+    background-size: 120% 130%;
+    transition:1.3s ease-out;
+    transform-style: preserve-3d;
+    filter: blur(1px) ;
 
 
 }
