--- a/src/main/webapp/resources/css/label.css
+++ b/src/main/webapp/resources/css/label.css
@@ -11,6 +11,13 @@
     overflow: hidden;
 }
 
+
+#side_refresh_lbl{
+    position: absolute;
+    width:50px;
+    height: 50px;
+    border:1px solid red;
+}
 .label{
     position: relative;
     width: 400px;
@@ -31,6 +38,7 @@
     font-size: 30px;
     margin-top: 5%;
     left: -90%;
+    transition: 2s linear;
 }
 
 label{
@@ -57,7 +65,7 @@ label{
     width: 0px;
     height: 60px;
     display: block;
-    transition: 4.3s ease-in;
+    transition: 3.3s ease-in;
     overflow: hidden;
 }
 
@@ -79,7 +87,7 @@ label{
     left: 45%;
     color: #00ffae;
     font-size: 40px;
-    text-shadow: 0 0 4px #00ffae, 3px -4px 2px black
+    text-shadow: 0 0 4px #00ffae, 3px -4px 2px black;
 }
 
 #passwordInput{
@@ -90,9 +98,8 @@ label{
     color: #00ffae;
     font-size: 40px;
     overflow: hidden;
-    text-shadow:0 0 4px #00ffae, 3px -4px 2px black
+    text-shadow:0 0 4px #00ffae, 3px -4px 2px black;
 }
-
 
 #secondPane{
     background: url("resources/content/img/331.jpg"); background-size: cover;
@@ -100,6 +107,13 @@ label{
     opacity: 0;
     width: 100%;
     height: 100%;
+}
+
+.lbl{
+    position: absolute;
+    width:50px;
+    height: 50px;
+    border: red;
 }
 
 #bgPane{
