--- a/src/main/webapp/resources/css/audio.css
+++ b/src/main/webapp/resources/css/audio.css
@@ -75,10 +75,9 @@ html,body {
     float: left;
     width: 0px;
     height: 50%;
-    /*top: 16%;*/
     margin: 1px;
     /*border: 1px solid;*/
-    transition: width 0.4s linear, box-shadow .4s linear, height .7s ease-out;
+    transition: width 1s linear, box-shadow .4s linear, height .7s ease-out;
     background: #ff9100;
 
 }
@@ -150,10 +149,10 @@ button {
 }
 
 
-i {
-    color: #ccff0a;
-    text-shadow: 0px 0px 2px;
-}
+/*i {*/
+/*    color: #cd ccff0a;*/
+/*    text-shadow: 0px 0px 2px;*/
+/*}*/
 
 #canvasWrapper {
     position: absolute;
@@ -166,7 +165,7 @@ i {
     width: 100%;
     height: 100%;
 
-    filter: drop-shadow(2px -2px 18px red) drop-shadow(-2px -5px 2px #f60228);      top: 25%;
+    /*filter: drop-shadow(2px -2px 18px red) drop-shadow(-2px -5px 2px #f60228);      top: 25%;*/
 }
 #can1wrapper{
     position: relative;
@@ -186,7 +185,7 @@ i {
     transform: rotateY(180deg);
     position: absolute;
     width: 100%;
-    height: 30%;
+    height: 40%;
     top: 15%;
     overflow: hidden;
 }
